[package]
name = "jam-core"
version = "0.1.0"
authors = ["Idan Attias <idana@wix.com>"]
edition = "2018"

[dependencies]
semver = "0.11.0"
log = "0.4"
petgraph = "0.5.1"
futures = "0.3.12"
async-trait = "0.1.48"
jam-cache = { path = "../jam-cache" }
jam-npm-metadata = { path = "../jam-npm-metadata" }
jam-common = { path = "../jam-common" }
again = "0.1.2"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "1.1.1"

[dev-dependencies]
maplit = "1.0.2"
tokio = { version = "1.2", features = ["full"] }
