[package]
name = "jam"
version = "0.1.0"
authors = ["Idan Attias <idana@wix.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globwalk = "0.8.1"
log = "0.4"
env_logger = "0.8.3"
reqwest = { version = "0.11.0", features = ["json"] }
urlencoding = "1.1.1"
semver = "0.11.0"
jam-core = { path = "../jam-core" }
clap = "3.0.0-beta.2"
tokio = { version = "1.2", features = ["full"] }
futures = "0.3.12"
again = "0.1.2"
petgraph = "0.5.1"
array_tool = "1.0.3"
dashmap = "4.0.2"
async-trait = "0.1.48"
directories = "3.0"
tar = "0.4.33"
flate2 = "1.0.14"
jam-npm-metadata = { path = "../jam-npm-metadata" }
jam-cache = { path = "../jam-cache" }
jam-common = { path = "../jam-common" }
path_abs = "0.5.1"

[dev-dependencies]
jam-test-utils = { path = "../jam-test-utils" }
maplit = "1.0.2"
httpmock = "0.5.5"
reqwest = { version = "0.11.0", features = ["blocking"] }
tempdir = "0.3.7"
