[package]
name = "jm-core"
version = "0.1.0"
authors = ["Idan Attias <idana@wix.com>"]
edition = "2018"

[dependencies]
semver = "0.11.0"
log = "0.4"
petgraph = "0.5.1"
futures = "0.3.12"
async-trait = "0.1.48"
globwalk = "0.8.1"
reqwest = { version = "0.11.0" }

[dev-dependencies]
maplit = "1.0.2"
tokio = { version = "1.2", features = ["full"] }
