[package]
name = "jm-test-utils"
version = "0.1.0"
authors = ["Idan Attias <idana@wix.com>"]
edition = "2018"

[dependencies]
tempdir = "0.3"
futures = "0.3.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jm-npm-metadata = { path = "../jm-npm-metadata" }
tar = "0.4.33"
flate2 = "1.0.14"
httpmock = "0.5.5"
urlencoding = "1.1.1"

[dev-dependencies]
reqwest = { version = "0.11.0", features = ["blocking"] }
maplit = "1.0.2"
