[package]
name = "jm"
version = "0.1.0"
authors = ["Idan Attias <idana@wix.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globwalk = "0.8.1"
log = "0.4"
env_logger = "0.8.3"
reqwest = { version = "0.11.0", features = ["json"] }
urlencoding = "1.1.1"
semver = "0.11.0"
clap = "3.0.0-beta.2"
tokio = { version = "1.2", features = ["full"] }
futures = "0.3.12"
again = "0.1.2"

[dev-dependencies]
jm-test-utils = { path = "../jm-test-utils" }
maplit = "1.0.2"
